--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,7 +7,7 @@ styles: true
 $backgroundColour: #ffffff !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
-$accentColour: #919493 !default;
+$accentColour: #5c91bd !default;
 
 // Text colours
 $headingColour: #000000 !default;
