updated for princeont

--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -16,8 +16,8 @@
 
     <div class="div_wallpaper">
       <img class="img_wallpaper" src="{{site.feature_img}}">
-      <span class="text_wallpaper_main">Human & Machine Learning Lab</span>
-      <span class="text_wallpaper_sub">New York University</span>
+      <span class="text_wallpaper_main">Human & Machine Intelligence</span>
+      <span class="text_wallpaper_sub">A lab at Princeton University</span>
     </div>
 
     <div class="container mt-5">
